[tool.poetry]
name = "durak-game"
version = "0.0.0"
description = "WIP - A simple durak game for Discord."
authors = ["RickBarretto"]
license = "MPL-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.3.0"
ruff = "^0.1.3"
bandit = {extras = ["toml"], version = "^1.7.5"}
mccabe = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
